# lucci-fugu

./: .env.example  .gitignore  DEPLOY.md  README.md  design-qa.md  main.py  pyproject.toml  render.yaml  requirements.txt
app/: __init__.py  config.py  costs.py  schemas.py  user_settings.py  workflow.py
config/: model_pricing.json
static/: app.js  index.html  style.css
tests/: test_api.py
